==> exxstence/CanSat-KOMETOS/Core/Src/ICM42688.cpp <==
#include "altMain.hpp"
#include "ICM42688.h"
#include "ICM42688_registers.h"
#include "string.h"

int ICM42688::begin() {

  // setting CS pin high
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_SET);


  // reset the ICM42688
  reset();

  // check the WHO AM I byte
  if(whoAmI() != WHO_AM_I) {
    return -3;
  }

  HAL_Delay(10);
  // turn on accel and gyro in Low Noise (LN) Mode
  if(writeRegister(UB0_REG_PWR_MGMT0, 0x0F) < 0) {
    return -4;
  }

  // 16G is default -- do this to set up accel resolution scaling
  int ret = setAccelFS(gpm16);
  if (ret < 0) return ret;

  // 2000DPS is default -- do this to set up gyro resolution scaling
  ret = setGyroFS(dps2000);
  if (ret < 0) return ret;

  // // disable inner filters (Notch filter, Anti-alias filter, UI filter block)
  // if (setFilters(false, false) < 0) {
  //   return -7;
  // }

  // estimate gyro bias
  if (calibrateGyro() < 0) {
    return -8;
  }

  // successful init, return 1
  return 1;
}

int ICM42688_FIFO::readFifo() {
  _useSPIHS = true; // use the high speed SPI for data readout
  // get the fifo size
  readRegisters(UB0_REG_FIFO_COUNTH, 2, _buffer);
  _fifoSize = (((uint16_t) (_buffer[0]&0x0F)) <<8) + (((uint16_t) _buffer[1]));
  // read and parse the buffer
  for (size_t i=0; i < _fifoSize/_fifoFrameSize; i++) {
    // grab the data from the ICM42688
    if (readRegisters(UB0_REG_FIFO_DATA, _fifoFrameSize, _buffer) < 0) {
      return -1;
    }
    if (_enFifoAccel) {
      // combine into 16 bit values
      int16_t rawMeas[3];
      rawMeas[0] = (((int16_t)_buffer[0]) << 8) | _buffer[1];
      rawMeas[1] = (((int16_t)_buffer[2]) << 8) | _buffer[3];
      rawMeas[2] = (((int16_t)_buffer[4]) << 8) | _buffer[5];
      // transform and convert to float values
      _axFifo[i] = ((rawMeas[0] * _accelScale) - _accB[0]) * _accS[0];
      _ayFifo[i] = ((rawMeas[1] * _accelScale) - _accB[1]) * _accS[1];
      _azFifo[i] = ((rawMeas[2] * _accelScale) - _accB[2]) * _accS[2];
      _aSize = _fifoSize / _fifoFrameSize;
    }
    if (_enFifoTemp) {
      // combine into 16 bit values
      int16_t rawMeas = (((int16_t)_buffer[0 + _enFifoAccel*6]) << 8) | _buffer[1 + _enFifoAccel*6];
      // transform and convert to float values
      _tFifo[i] = (static_cast<float>(rawMeas) / TEMP_DATA_REG_SCALE) + TEMP_OFFSET;
      _tSize = _fifoSize/_fifoFrameSize;
    }
    if (_enFifoGyro) {
      // combine into 16 bit values
      int16_t rawMeas[3];
      rawMeas[0] = (((int16_t)_buffer[0 + _enFifoAccel*6 + _enFifoTemp*2]) << 8) | _buffer[1 + _enFifoAccel*6 + _enFifoTemp*2];
      rawMeas[1] = (((int16_t)_buffer[2 + _enFifoAccel*6 + _enFifoTemp*2]) << 8) | _buffer[3 + _enFifoAccel*6 + _enFifoTemp*2];
      rawMeas[2] = (((int16_t)_buffer[4 + _enFifoAccel*6 + _enFifoTemp*2]) << 8) | _buffer[5 + _enFifoAccel*6 + _enFifoTemp*2];
      // transform and convert to float values
      _gxFifo[i] = (rawMeas[0] * _gyroScale) - _gyrB[0];
      _gyFifo[i] = (rawMeas[1] * _gyroScale) - _gyrB[1];
      _gzFifo[i] = (rawMeas[2] * _gyroScale) - _gyrB[2];
      _gSize = _fifoSize/_fifoFrameSize;
    }
  }
  return 1;
}

void ICM42688_FIFO::getFifoTemperature_C(size_t *size,float* data) {
  *size = _tSize;
  memcpy(data,_tFifo,_tSize*sizeof(float));
}

int ICM42688::writeRegister(uint8_t subAddress, uint8_t data) {
  /* write data to device */
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_RESET);
  HAL_SPI_Transmit(_spi, &subAddress, 1, 50);
  while(HAL_SPI_GetState(_spi) == HAL_SPI_STATE_BUSY);
  HAL_SPI_Transmit(_spi, &data, 1, 50);
  while(HAL_SPI_GetState(_spi) == HAL_SPI_STATE_BUSY);
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_SET);


  HAL_Delay(10);

  /* read back the register */
  readRegisters(subAddress, 1, _buffer);
  /* check the read back register against the written register */
  if(_buffer[0] == data) {
    return 1;
  }
  else{
    return -1;
  }
}

int ICM42688::readRegisters(uint8_t subAddress, uint8_t count, uint8_t* dest) {

  uint8_t address = subAddress;
  uint8_t data = address | 0x80;
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_RESET);
  HAL_SPI_Transmit(_spi, &data, 1, 50);
  while(HAL_SPI_GetState(_spi) == HAL_SPI_STATE_BUSY);
  HAL_SPI_Receive(_spi, dest, count, 50);

  while(HAL_SPI_GetState(_spi) == HAL_SPI_STATE_BUSY);
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_SET);

  return 1;
}
