==> braedouble/5g_sensor_docs/sensor_code/ESP_Ethernet/lib/ICM42688/ICM42688.cpp <==
#include "Arduino.h"
#include "ICM42688.h"
#include "registers.h"

int ICM42688::begin() {
  if( _useSPI ) { // using SPI for communication
    // use low speed SPI for register setting
    _useSPIHS = true;

    // setting CS pin to output
    pinMode(_csPin,OUTPUT);
    // setting CS pin high
    digitalWrite(_csPin,HIGH);
    // begin SPI communication
    _spi->begin(4, MISO, MOSI, 5);
  } else { // using I2C for communication
    // starting the I2C bus
    _i2c->begin();
    // setting the I2C clock
    _i2c->setClock(I2C_CLK);
  }

  // reset the ICM42688
  //reset();

  // check the WHO AM I byte
  if(whoAmI() != WHO_AM_I) {
    return whoAmI();
  }

  // turn on accel only Low Noise (LN) Mode
  if(writeRegister(UB0_REG_PWR_MGMT0, 0x03) < 0) {
    return -4;
  }

  // 16G is default -- do this to set up accel resolution scaling
  int ret = setAccelFS(gpm16);
  if (ret < 0) return ret;

  // 2000DPS is default -- do this to set up gyro resolution scaling
  ret = setGyroFS(dps2000);
  if (ret < 0) return ret;

  // // disable inner filters (Notch filter, Anti-alias filter, UI filter block)
  // if (setFilters(false, false) < 0) {
  //   return -7;
  // }

  // estimate gyro bias
  if (calibrateGyro() < 0) {
    return -8;
  }
  // successful init, return 1
  return 1;
}

  int ICM42688_FIFO::readFifo() {

    // get the fifo size
    readRegisters(UB0_REG_FIFO_COUNTH, 2, _buffer);
    _fifoSize =
        (((uint16_t)(_buffer[0] & 0x0F)) << 8) + (((uint16_t)_buffer[1]));

    // precalculate packet structure as per-packet recalculation based on
    // headers isn't reliable
    size_t numFrames = _fifoSize / _fifoFrameSize;
    // start position + length
    size_t accIndex = 1; // header 1 length, accel starts at 1
    size_t gyroIndex =
        accIndex + _enFifoAccel * 6; // if accel enabled, 6 length
    size_t tempIndex = gyroIndex + _enFifoGyro * 6; // if gyro enabled, 6 length
    size_t timestampIndex =
        tempIndex +
        _enFifoTemp *
            (_enFifoHighRes + 1); // temp 1 unless HR enabled, then 2 length
    size_t extensionIndex =
        timestampIndex + _enFifoTimestamp * 2; // if on, 2 length, otherwise 0

    // read and parse the buffer
    for (size_t i = 0; i < _fifoSize / _fifoFrameSize; i++) {
      // read the FIFO data from the ICM42688
      if (readRegisters(UB0_REG_FIFO_DATA, _fifoFrameSize, _buffer) < 0) {
        return -1;
      }

      // if accel or gyro data is enabled, read header
      if (_enFifoHeader) {
        // read the header
        uint8_t rawMeas = _buffer[0];
        // transform and convert to float values
        _hFifo[i] = (rawMeas);
        _hSize = numFrames;
      }

      // if FIFO contains accel data
      if (_enFifoAccel) {
        // if not high resolution mode:
        if (!_enFifoHighRes) {
          // combine into 16 bit values
          int16_t rawMeas[3];

          // if there is accel data, always in the same positions
          // X - always 0x01 [15:8], 0x02 [7:0]
          rawMeas[0] =
              (((int16_t)_buffer[0 + accIndex]) << 8) | _buffer[1 + accIndex];
          // Y - always 0x03 [15:8], 0x04 [7:0]
          rawMeas[1] =
              (((int16_t)_buffer[2 + accIndex]) << 8) | _buffer[3 + accIndex];
          // Z - always 0x05 [15:8], 0x06 [7:0]
          rawMeas[2] =
              (((int16_t)_buffer[4 + accIndex]) << 8) | _buffer[5 + accIndex];
          // transform and convert to float values
          //_axFifo[i] = ((rawMeas[0] * _accelScale) - _accB[0]) * _accS[0];
          //_ayFifo[i] = ((rawMeas[1] * _accelScale) - _accB[1]) * _accS[1];
          //_azFifo[i] = ((rawMeas[2] * _accelScale) - _accB[2]) * _accS[2];
          _axFifo[i] = rawMeas[0]; // x
          _ayFifo[i] = rawMeas[1]; // y
          _azFifo[i] = rawMeas[2]; // z
          _aSize = _fifoSize / _fifoFrameSize;
        } else {
          // high resolution mode
          // combine into 20 bit values
          int32_t rawMeas[3]; // increase size for larger accel data

          // 20-bit data format, 18-bits of actual data and the two lowest order
          // bits are always set to 0 X - always 0x01 [19:12], 0x02 [11:4], 0x11
          // [3:0]
          rawMeas[0] = (((int32_t)_buffer[0 + accIndex]) << 10) |
                       ((_buffer[1 + accIndex] << 2) |
                        ((_buffer[0 + extensionIndex] >> 6)));
          // C/C++ does NOT automatically sign-extend non-standard bit widths
          // (like 18-bit). Sign-extend 18-bit value to 32-bit
          if (rawMeas[0] & (1 << 17)) {
            rawMeas[0] |= 0xFFFC0000;
          }
          // Y - always 0x03, 0x04, 0x12
          rawMeas[1] = (((int32_t)_buffer[2 + accIndex]) << 10) |
                       ((_buffer[3 + accIndex] << 2) |
                        ((_buffer[1 + extensionIndex] >> 6)));
          if (rawMeas[1] & (1 << 17)) {
            rawMeas[1] |= 0xFFFC0000;
          }
          // Z - always 0x05, 0x06, 0x13
          rawMeas[2] = (((int32_t)_buffer[4 + accIndex]) << 10) |
                       ((_buffer[5 + accIndex] << 2) |
                        ((_buffer[2 + extensionIndex] >> 6)));
          if (rawMeas[2] & (1 << 17)) {
            rawMeas[2] |= 0xFFFC0000;
          }
          // transform and convert to float values
          //_axFifo[i] = ((rawMeas[0] * _accelScale) - _accB[0]) * _accS[0];
          //_ayFifo[i] = ((rawMeas[1] * _accelScale) - _accB[1]) * _accS[1];
          //_azFifo[i] = ((rawMeas[2] * _accelScale) - _accB[2]) * _accS[2];
          _axFifo[i] = rawMeas[0]; // x
          _ayFifo[i] = rawMeas[1]; // y
          _azFifo[i] = rawMeas[2]; // z
          _aSize = _fifoSize / _fifoFrameSize;
        }
      }

      // if FIFO contains temperature data
      if (_enFifoTemp) {
        // if not high resolution mode, 8 bit value
        if (!_enFifoHighRes) {
          int8_t rawMeas = _buffer[0 + tempIndex];
          // transform and convert to float values
          //_tFifo[i] = (static_cast<float>(rawMeas) / TEMP_DATA_REG_SCALE) +
          //TEMP_OFFSET; _tSize    = numFrames;
          _tempFifo[i] = (rawMeas);
          _tempSize = numFrames;
        } else { // high resolution mode,  16 bit value
          // combine into 16 bit values
          int16_t rawMeas =
              (((int16_t)_buffer[0 + tempIndex] << 8) | _buffer[1 + tempIndex]);
          // transform and convert to float values
          //_tFifo[i] = (static_cast<float>(rawMeas) / TEMP_DATA_REG_SCALE) +
          //TEMP_OFFSET; _tSize = _fifoSize/_fifoFrameSize;
          _tempFifo[i] = (rawMeas);
          _tempSize = numFrames;
        }
      }

      // if FIFO contains gyro data
      if (_enFifoGyro) {
        // if not high resolution mode:
        if (!_enFifoHighRes) {
          // combine into 16 bit values
          int16_t rawMeas[3];
          // if there is gyro data, always in the same positions
          // X - always 0x01 [15:8], 0x02 [7:0]
          rawMeas[0] =
              (((int16_t)_buffer[0 + gyroIndex]) << 8) | _buffer[1 + gyroIndex];
          // Y - always 0x03 [15:8], 0x04 [7:0]
          rawMeas[1] =
              (((int16_t)_buffer[2 + gyroIndex]) << 8) | _buffer[3 + gyroIndex];
          // Z - always 0x05 [15:8], 0x06 [7:0]
          rawMeas[2] =
              (((int16_t)_buffer[4 + gyroIndex]) << 8) | _buffer[5 + gyroIndex];
          // transform and convert to float values
          //_gxFifo[i] = (rawMeas[0] * _gyroScale) - _gyrB[0];
          //_gyFifo[i] = (rawMeas[1] * _gyroScale) - _gyrB[1];
          //_gzFifo[i] = (rawMeas[2] * _gyroScale) - _gyrB[2];
          _gxFifo[i] = rawMeas[0]; // x
          _gyFifo[i] = rawMeas[1]; // y
          _gzFifo[i] = rawMeas[2]; // z
          _gSize = numFrames;
        } else {
          // high resolution mode
          // combine into 20 bit values
          int32_t rawMeas[3]; // increase size for larger gyro data
          // 20-bit data format, 19-bits of actual data and the LSB is always
          // set to 0 X - always 0x01 [19:12], 0x02 [11:4], 0x11 [3:0]
          rawMeas[0] = (((int32_t)_buffer[0 + gyroIndex]) << 12) |
                       ((_buffer[1 + gyroIndex] << 4) |
                        ((_buffer[0 + extensionIndex] >> 4) & 0x0F)) >>
                           2;
          // C/C++ does NOT automatically sign-extend non-standard bit widths
          // (like 18-bit). Sign-extend 18-bit value to 32-bit
          if (rawMeas[0] & (1 << 17)) {
            rawMeas[0] |= 0xFFFC0000;
          }
          // Y - always 0x03, 0x04, 0x12
          rawMeas[1] = (((int32_t)_buffer[2 + gyroIndex]) << 12) |
                       ((_buffer[3 + gyroIndex] << 4) |
                        ((_buffer[0 + extensionIndex] >> 4) & 0x0F)) >>
                           2;
          if (rawMeas[1] & (1 << 17)) {
            rawMeas[1] |= 0xFFFC0000;
          }
          // Z - always 0x05, 0x06, 0x13
          rawMeas[2] = (((int32_t)_buffer[4 + gyroIndex]) << 12) |
                       ((_buffer[5 + gyroIndex] << 4) |
                        ((_buffer[0 + extensionIndex] >> 4) & 0x0F)) >>
                           2;
          if (rawMeas[2] & (1 << 17)) {
            rawMeas[2] |= 0xFFFC0000;
          }
          // transform and convert to float values
          //_gxFifo[i] = (rawMeas[0] * _gyroScale) - _gyrB[0];
          //_gyFifo[i] = (rawMeas[1] * _gyroScale) - _gyrB[1];
          //_gzFifo[i] = (rawMeas[2] * _gyroScale) - _gyrB[2];
          _gxFifo[i] = rawMeas[0]; // x
          _gyFifo[i] = rawMeas[1]; // y
          _gzFifo[i] = rawMeas[2]; // z
          _gSize = numFrames;
        }
      }

      // if FIFO contains timestamp data
      if (_enFifoTimestamp) {
        // combine into 16 bit values
        int16_t rawMeas = (((int16_t)_buffer[0 + timestampIndex] << 8) |
                           _buffer[1 + timestampIndex]);
        // transform and convert to float values
        //_tFifo[i] = (static_cast<float>(rawMeas));
        //_tSize = _fifoSize/_fifoFrameSize;
        _timeFifo[i] = (rawMeas);
        _timeSize = numFrames;
      }
    }
    return 1;
  }

  void ICM42688_FIFO::getFifoTemperature_C(size_t *size, float *data) {
    *size = _tempSize;
    memcpy(data, _tempFifo, _tempSize * sizeof(float));
  }

  int ICM42688::writeRegister(uint8_t subAddress, uint8_t data) {
    /* write data to device */
    if (_useSPI) {
      _spi->beginTransaction(SPISettings(SPI_LS_CLOCK, MSBFIRST,
                                         SPI_MODE3)); // begin the transaction
      digitalWrite(_csPin, LOW);  // select the ICM42688 chip
      _spi->transfer(subAddress); // write the register address
      _spi->transfer(data);       // write the data
      digitalWrite(_csPin, HIGH); // deselect the ICM42688 chip
      _spi->endTransaction();     // end the transaction
    } else {
      _i2c->beginTransmission(_address); // open the device
      _i2c->write(subAddress);           // write the register address
      _i2c->write(data);                 // write the data
      _i2c->endTransmission();
    }

    delay(10);

    /* read back the register */
    readRegisters(subAddress, 1, _buffer);
    /* check the read back register against the written register */
    if (_buffer[0] == data) {
      return 1;
    } else {
      return -1;
    }
  }

  int IRAM_ATTR ICM42688::readRegisters(uint8_t subAddress, uint8_t count,
                                        uint8_t *dest) {
    // if( _useSPI ) {
    //  begin the transaction
    // if(_useSPIHS) {
    _spi->beginTransaction(_spiSettings);
    //}
    //else{
    //  _spi->beginTransaction(SPISettings(SPI_LS_CLOCK, MSBFIRST, SPI_MODE3));
    //}
    
    //digitalWrite(_csPin,LOW); // select the ICM42688 chip
    REG_CLR_BIT(GPIO_OUT_REG, 1 << _csPin); // Set CS pin LOW
    
    _spi->transfer(subAddress | 0x80); // specify the starting register address

    
    for(uint8_t i = 0; i < count; i++) {
      dest[i] = _spi->transfer(0x00); // read the data
    }


    //digitalWrite(_csPin,HIGH); // deselect the ICM42688 chip
    REG_SET_BIT(GPIO_OUT_REG, 1 << _csPin); // Set CS pin HIGH

    _spi->endTransaction(); // end the transaction
    return 1;
  }
